--- a/python笔记/练习题.md
+++ b/python笔记/练习题.md
@@ -18,18 +18,23 @@
    
    > **题目描述**:学习了输出语句，请参照例题，编写一个程序，输出以下信息：
    > 
-   > `**************************`
-   > 
-   > `Hello World!`
-   > 
-   > `**************************`
+   > ```python
+   > **************************
+   > Hello World!
+   > **************************
+   > ```
    > 
    > 注意：Hello与World之间有一个空格以及大小写问题
    > *也是输出的一部分，别光打印Hello World！
    > 
    > **输入格式**：无
    > 
-   > **输出格式**：如上
+   > **输出格式**：
+   > ```python
+   > **************************
+   > Hello World!
+   > **************************
+   > ```
 
 3. 三个数最大值
    
@@ -69,11 +74,16 @@
    > **输出格式**：对于每个测试实例，输出在第n年的时候母牛的数量。要求每个输出占一行。
    > 
    > **样例输入**：
+   > ```python
    > 2
    > 4
    > 5 
    > 0 
+   > ```
+   > 
    > **样例输出**：
+   > 
+   > ```python
    > 2
    > 4
    > 6
@@ -100,7 +110,9 @@
    > 
    > **样例输入**：5
    > 
-   > **样例输出**：周长:31.42
+   > **样例输出**：
+   > ```python
+   > 周长:31.42
    > 面积:78.54
 
 8. 成绩评定
@@ -128,6 +140,7 @@
    > **样例输入**：12345
    > 
    > **样例输出**：
+   > ```python
    > 5
    > 1 2 3 4 5
    > 54321
@@ -145,18 +158,32 @@
    > **样例输出**：True
 
 11. 最大公约数与最小公倍数
+
+    - 1 最大公约数与最小公倍数
    
-   > **题目描述**:输入两个正整数m和n，求其最大公约数和最小公倍数。
-   >
-   > **注**:两个数的最大公约数是两个数的公共因子中最大的那个数；两个数的最小公倍数则是能够同时被两个数整除的最小的那个数。
-   > 
-   > **输入格式**：两个整数
-   > 
-   > **输出格式**：最大公约数，最小公倍数
-   > 
-   > **样例输入**：5 7
-   > 
-   > **样例输出**：1 35
+      >**题目描述**:输入两个正整数m和n，求其最大公约数和最小公倍数。
+      >
+      >**注**:两个数的最大公约数是两个数的公共因子中最大的那个数；两个数的最小公倍数则是能够同时被两个数整除的最小的那个数。
+      > 
+      >**输入格式**：两个整数
+      > 
+      >**输出格式**：最大公约数，最小公倍数
+      > 
+      >**样例输入**：5 7
+      > 
+      >**样例输出**：1 35
+
+    - 2 自定义函数处理最大公约数与最小公倍数
+
+      >**题目描述**:写两个函数，分别求两个整数的最大公约数和最小公倍数，用主函数调用这两个函数，并输出结果两个整数由键盘输入。
+      > 
+      >**输入格式**：两个数
+      > 
+      >**输出格式**：最大公约数 最小公倍数
+      > 
+      >**样例输入**：6 15
+      > 
+      >**样例输出**：3 30
 
 12. 字符串分类统计
    
@@ -218,7 +245,9 @@
    > 
    > **样例输入**：无
    > 
-   > **样例输出**：153
+   > **样例输出**：
+   > ```python
+   > 153
    > 370
    > 371
    > 407
@@ -234,23 +263,41 @@
    > 
    > **样例输入**：1000
    > 
-   > **样例输出**：6 的因子是 1 2 3 
+   > **样例输出**：
+   > 
+   > ```python
+   > 6 的因子是 1 2 3 
    > 28 的因子是 1 2 4 7 14 
-   > 496 的因子是 1 2 4 8 16 31 62 124 248 
+   > 496 的因子是 1 2 4 8 16 31 62 124 248
 
 18. 有规律的数列求和
+
+    - 1 有规律的数列求和
    
-   > **题目描述**:有一分数序列： 2/1 3/2 5/3 8/5 13/8 21/13...... 求出这个数列前N项之和，保留两位小数。
-   > 
-   > **提示**：可以参考斐波那契数列
-   > 
-   > **输入格式**：N
-   > 
-   > **输出格式**：数列前N项和
-   > 
-   > **样例输入**：10
-   > 
-   > **样例输出**：16.48
+      >**题目描述**:有一分数序列： 2/1 3/2 5/3 8/5 13/8 21/13...... 求出这个数列前N项之和，保留两位小数。
+      > 
+      >**输入格式**：N
+      > 
+      >**输出格式**：数列前N项和
+      > 
+      >**样例输入**：10
+      > 
+      >**样例输出**：16.48
+
+    - 2 生成斐波那契数列前20个数。
+
+      >**题目描述**:斐波那契数列（Fibonacci sequence），又称黄金分割数列，是意大利数学家莱昂纳多·斐波那契（Leonardoda Fibonacci）
+      > 在《计算之书》中提出一个在理想假设条件下兔子成长率的问题而引入的数列，所以这个数列也被戏称为"兔子数列"。
+      > 斐波那契数列的特点是数列的前两个数都是1，从第三个数开始，每个数都是它前面两个数的和，
+      > 形如：1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, ...。斐波那契数列在现代物理、准晶体结构、化学等领域都有直接的应用。
+      > 
+      >**输入格式**：无
+      > 
+      >**输出格式**：斐波那契数列前20个数
+      > 
+      >**样例输入**：无
+      > 
+      >**样例输出**：1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 1597 2584 4181 6765
 
 19. 自由下落的距离计算
    
@@ -329,12 +376,33 @@
    > 
    > **样例输出**：公鸡: 0只, 母鸡: 25只, 小鸡: 75只
 
-25. 
+25. 数组插入处理
+   
+   > **题目描述**:已有一个已正序排好的9个元素的数组，今输入一个数要求按原来排序的规律将它插入数组中。
+   > 
+   > **输入格式**：第一行，原始数列。 第二行，需要插入的数字。
+   > 
+   > **输出格式**：排序后的数列
+   > 
+   > **样例输入**：1 7 8 17 23 24 59 62 101
+   > 50
+   > 
+   > **样例输出**：1 7 8 17 23 24 50 59 62 101
 
+26. 数字逆序输出
+   
+   > **题目描述**:输入10个数字，然后逆序输出。
+   > 
+   > **输入格式**：十个整数
+   > 
+   > **输出格式**：逆序输出，空格分开
+   > 
+   > **样例输入**：1 2 3 4 5 6 7 8 9 0
+   > 
+   > **样例输出**：0 9 8 7 6 5 4 3 2 1
 
-
-
-
+27. 
+   
 
 
 
